install-yaml/gateway/whoami/whoami-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: my-gateway

spec:
  gatewayClassName: my-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: http-app-1
  labels:
    app: traefik
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - traefik.costalong.cn
  rules:
    - matches:
        - path:
            type: Exact
            value: /foo
    - backendRefs:                          # [14]
        - name: whoami                   # [15]
          weight: 1                         # [16]
          port: 80
